# PIIK

./: .gitignore  CMakeLists.txt  README.md
WpfTemplate/: WpfTemplate.sln
WpfTemplate/WpfTemplate/: App.xaml  MainWindow.xaml  WpfTemplate.csproj
WpfTemplate/WpfTemplate/Srouce/: MainWindow.xaml
include/Infra/: Assert.hpp  CommandLine.hpp  File.hpp  Image.hpp  Logger.hpp  Memory.hpp  NonCopyable.hpp  PlatformDefine.hpp  ResourcePtr.hpp  Socket.h  Socket.hpp  SocketBase.h  SocketBase.hpp  String.hpp  System.hpp
include/Infra/Android/: Android.h
include/Infra/Graphics/: Image.h
include/Infra/Network/: DNS.h  EndPoint.h  IpAddress.h  Socket.h  SocketBack.h  SocketState.h  TcpSocket.h
include/Infra/Windows/: Console.h
include/NativeWinApp/: Mouse.h  Window.h  WindowEvent.h
include/PIIK/: PlatformDefine.h
include/PIIK/Graphics/: Image.h
include/PIIK/Network/: DNS.h  EndPoint.h  IpAddress.h  Network.h  Socket.h  SocketState.h  TcpSocket.h  TcpSocketAccepter.h
include/PIIK/System/: Library.h  Memory.h  Process.h  System.h
include/PIIK/Utility/: CommandLine.h  File.h  Logger.h  NonCopyable.h  ScopeGuard.h  String.h  Timer.h
resource/: FontResource.rc
src/: CommandLine.cpp  File.cpp  Image.cpp  Logger.cpp  PiikDefine.h  SocketBase.cpp
src/Android/: Android.cpp
src/Graphics/: Image.cpp
src/Helper/: Console.h  File.cpp  File.h  FileDialog.h  Helper.hpp  Logger.cpp  Logger.h  Memory.h  Network.h  PlatformDefine.h  Process.h  ResourcePtr.h  ScopeGuard.h  Socket.h  SocketGeneral.h  String.h  Timer.h
src/Helper/Android/: Android.h
src/Helper/Ext/: OpenGL.cpp  OpenGL.h
src/Helper/OS/: Console.h  Memory.h  Socket.h  System.cpp  System.h  Window.h
src/Helper/WinApi/: WinApiConsole.cpp  WinApiConsole.h  WinApiFileDialog.cpp  WinApiFileDialog.h  WinApiMemory.cpp  WinApiMemory.h  WinApiResource.cpp  WinApiResource.h  WinApiSocket.h  (+6 more)
src/ImGuiWinApp/: ImGuiWinApp.cpp  ImGuiWinApp.h  Window.cpp  Window.h
src/Infra/: Android.hpp  Console.h  File.h  File.hpp  FileDialog.h  Logger.h  Logger.hpp  Memory.h  Memory.hpp  NonConstructible.h  NonCopyable.h  Process.h  Process.hpp  ResourcePtr.h  ScopeGuard.h  ScopeGuard.hpp  Socket.h  Socket.hpp  SocketBase.hpp  SocketGeneral.hpp  String.h  String.hpp  System.h  System.hpp  Timer.hpp
src/NativeWinApp/: FileDialog.cpp  FileDialog.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Resource.cpp  Resource.h  ResourceHandle.h  Window.WndProc.cpp  Window.cpp  Window.h
src/Network/: DNS.cpp  EndPoint.cpp  IpAddress.cpp  Network.cpp  Socket.cpp  SocketBase.cpp  TcpSocket.cpp  TcpSocketAccepter.cpp  Utility.hpp
src/Posix/: Memory.cpp  Process.cpp  Socket.cpp  String.cpp  System.cpp
src/System/: Library.cpp
src/Windows/: Console.cpp  FileDialog.cpp  Memory.cpp  Process.cpp  Socket.cpp  String.cpp  System.cpp
test/: CMakeLists.txt  DocTest.h  TestCommandLine.cpp  TestConsole.cpp  TestProcess.cpp  TestSocket.cpp  TestString.cpp  TestSystem.cpp
test/ImGuiWinAppTest/: CMakeLists.txt  TestImGuiWinApp.cpp
test/InfraTest/: CMakeLists.txt  TestConsole.cpp  TestProcess.cpp  TestSocket.cpp  TestString.cpp  TestSystem.cpp
test/NativeWinAppTest/: CMakeLists.txt  TestWindowOpenGL.cpp  TestWindowStyle.cpp
test/Network/: TestDNS.cpp  TestTcpSocketReceive.cpp  TestTcpSocketSend.cpp
test/test-socket/: CMakeLists.txt
test/test-string/: CMakeLists.txt  main.cpp
test/test-win-window/: CMakeLists.txt  main.cpp
test/test-win-window-opengl/: CMakeLists.txt  main.cpp
test/test-win-window-style/: CMakeLists.txt  main.cpp
tester/: test_win_window.cpp
(+114 files in other folders)
